# Juno

./: .dockerignore  .gitignore  .sample-env  Dockerfile  config.sample.json  config.sample.yaml  docker-compose.yaml  encrypt_files.py  generate_command.py  main.py  morning_configs.json  pyproject.toml  test_cuda.py  testing.ipynb
.github/workflows/: deploy.yaml  lint.yaml
bot/: juno.py  settings.py
bot/cogs/: music.py  real_time_voice_cog.py  scheduler.py  voice_recognition.py
bot/commands/: chat_command.py  echo.py  echo_command.py  image_admin_command.py  image_stats_command.py  ping_command.py  reply_command.py  sync_command.py
bot/services/: __init__.py  config_service.py  cooldown_service.py  discord_messages_service.py  embed_service.py  image_limit_service.py  message_service.py  mongo_image_limit_service.py  mongo_morning_config_service.py  response_service.py
bot/services/ai/: ai_orchestrator.py  ai_service_factory.py  anthropic_service.py  base_service.py  google_service.py  image_generation_service.py  ollama_service.py  openai_service.py  real_time_audio_service.py  types.py
bot/services/music/: audio_service.py  music_player.py  music_queue_service.py  priority_music_queue.py  types.py  youtube_service.py
bot/utils/: __init__.py  juno_slash.py
bot/utils/auth/: admin_check.py
bot/utils/decarators/: admin_check.py  command_logging.py  voice_check.py
