[tool.poetry]
name = "juno"
version = "0.1.0"
description = "Discord Bot"
authors = ["ethanlchristensen <ethanlchristensen@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.5.2"
python-dotenv = "^1.1.0"
openai = ">=1.90.0,<2.0.0"
ollama = "^0.4.7"
yt-dlp = "^2025.3.27"
pynacl = "^1.5.0"
rich = "^14.0.0"
google-genai = "^1.20.0"
cryptography = "^45.0.4"
discord-ext-voice-recv = "^0.5.2a179"
llvmlite = "^0.44.0"
numba = "^0.61.2"
openai-whisper = "^20240930"
elevenlabs = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"